--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Binary Files #
 *.class
 
 # Package Files #
 *.jar
 *.war
 *.ear
+target/
+
+# Eclipse Files #
+.classpath
+.project
+.settings/
