--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,8 @@
     <dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>jstl</artifactId>
-    	<version>1.1.2</version>
-    </dependency>
-    <dependency>
-    	<groupId>taglibs</groupId>
-    	<artifactId>standard</artifactId>
-    	<version>1.1.2</version>
+    	<version>1.2</version>
+    	<scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
