--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,8 @@
   <groupId>org.apodhrad.filemanager</groupId>
   <artifactId>filemanager-webapp</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>filemanager-webapp Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <version>0.1</version>
+  <name>filemanager-webapp</name>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
